# irodori-TTS-voice-drama-pipeline

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
agents/: openai.yaml
references/: adaptation-guidelines.md  emoji-annotations.md  production-schema.md
scripts/: generate_voice_drama.py  recombine_voice_drama.py  validate_production.py
